// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`await.js - babylon-verify 1`] = `
const doBothThings = async () => {
    const request = doAsyncThing();
    return (await request)::doSyncThing();
};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const doBothThings = async () => {
  const request = doAsyncThing();
  return (await request)::doSyncThing();
};

`;

exports[`await.js - babylon-verify 2`] = `
const doBothThings = async () => {
    const request = doAsyncThing();
    return (await request)::doSyncThing();
};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const doBothThings = async () => {
  const request = doAsyncThing()
  return (await request)::doSyncThing()
}

`;

exports[`bind_parens.js - babylon-verify 1`] = `
(a || b)::c;
a || (b::c);
::obj.prop;
(void 0)::func();
(+0)::is(-0);
a::(b.c);
a::(b.c());
a::b.c();
a::(b.c()());
a::((b.c())());
a::(b.c())();
a::(b.c().d);
a::(c().d.e);
a::(b());
a::(b::c());
a::(b()::c);
a::(b().c::d);
a::(b.c::d);
a::(b::c.d);
a::(b.c::d::e);
a::(b::c::d);
a::(b::c::d.e);
a::((b::c::d).e);
a::(void 0);
a::(b.c()::d.e);
a::(b.c::d.e);
a::(b.c::d.e)::f.g;
b.c::d.e;
(b.c::d).e;
(b::c::d).e;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a || b)::c;
a || b::c;
::obj.prop;
(void 0)::func();
(+0)::is(-0);
a::b.c;
a::(b.c());
a::b.c();
a::(b.c()());
a::(b.c()());
a::(b.c())();
a::(b.c().d);
a::(c().d.e);
a::(b());
a::(b::c());
a::(b()::c);
a::(b().c::d);
a::(b.c::d);
a::(b::c.d);
a::(b.c::d::e);
a::(b::c::d);
a::(b::c::d.e);
a::(b::c::d).e;
a::(void 0);
a::(b.c()::d.e);
a::(b.c::d.e);
a::(b.c::d.e)::f.g;
b.c::d.e;
(b.c::d).e;
(b::c::d).e;

`;

exports[`bind_parens.js - babylon-verify 2`] = `
(a || b)::c;
a || (b::c);
::obj.prop;
(void 0)::func();
(+0)::is(-0);
a::(b.c);
a::(b.c());
a::b.c();
a::(b.c()());
a::((b.c())());
a::(b.c())();
a::(b.c().d);
a::(c().d.e);
a::(b());
a::(b::c());
a::(b()::c);
a::(b().c::d);
a::(b.c::d);
a::(b::c.d);
a::(b.c::d::e);
a::(b::c::d);
a::(b::c::d.e);
a::((b::c::d).e);
a::(void 0);
a::(b.c()::d.e);
a::(b.c::d.e);
a::(b.c::d.e)::f.g;
b.c::d.e;
(b.c::d).e;
(b::c::d).e;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
;(a || b)::c
a || b::c
;::obj.prop
;(void 0)::func()
;(+0)::is(-0)
a::b.c
a::(b.c())
a::b.c()
a::(b.c()())
a::(b.c()())
a::(b.c())()
a::(b.c().d)
a::(c().d.e)
a::(b())
a::(b::c())
a::(b()::c)
a::(b().c::d)
a::(b.c::d)
a::(b::c.d)
a::(b.c::d::e)
a::(b::c::d)
a::(b::c::d.e)
a::(b::c::d).e
a::(void 0)
a::(b.c()::d.e)
a::(b.c::d.e)
a::(b.c::d.e)::f.g
b.c::d.e
;(b.c::d).e
;(b::c::d).e

`;

exports[`long_name_method.js - babylon-verify 1`] = `
class X {
  constructor() {
    this.testLongNameMethodAndSomethingElseLallala = ::this.testLongNameMethodAndSomethingElseLallala;
  }
  
  testLongNameMethodAndSomethingElseLallala() {
    return true;
  }
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class X {
  constructor() {
    this.testLongNameMethodAndSomethingElseLallala =
      ::this.testLongNameMethodAndSomethingElseLallala;
  }

  testLongNameMethodAndSomethingElseLallala() {
    return true;
  }
}

`;

exports[`long_name_method.js - babylon-verify 2`] = `
class X {
  constructor() {
    this.testLongNameMethodAndSomethingElseLallala = ::this.testLongNameMethodAndSomethingElseLallala;
  }
  
  testLongNameMethodAndSomethingElseLallala() {
    return true;
  }
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class X {
  constructor() {
    this.testLongNameMethodAndSomethingElseLallala =
      ::this.testLongNameMethodAndSomethingElseLallala
  }

  testLongNameMethodAndSomethingElseLallala() {
    return true
  }
}

`;

exports[`method_chain.js - babylon-verify 1`] = `
import {interval} from 'rxjs/observable/interval';
import {filter} from 'rxjs/operator/filter';
import {take} from 'rxjs/operator/take';
import {map} from 'rxjs/operator/map';
import {throttle} from 'rxjs/operator/throttle';
import {takeUntil} from 'rxjs/operator/takeUntil';

function test(observable) {
    return observable
        ::filter(data => data.someTest)
        ::throttle(() =>
            interval(10)
                ::take(1)
                ::takeUntil(observable::filter(data => someOtherTest))
        )
        ::map(someFunction);
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import { interval } from "rxjs/observable/interval";
import { filter } from "rxjs/operator/filter";
import { take } from "rxjs/operator/take";
import { map } from "rxjs/operator/map";
import { throttle } from "rxjs/operator/throttle";
import { takeUntil } from "rxjs/operator/takeUntil";

function test(observable) {
  return observable
    ::filter(data => data.someTest)
    ::throttle(() =>
      interval(10)
        ::take(1)
        ::takeUntil(observable::filter(data => someOtherTest))
    )
    ::map(someFunction);
}

`;

exports[`method_chain.js - babylon-verify 2`] = `
import {interval} from 'rxjs/observable/interval';
import {filter} from 'rxjs/operator/filter';
import {take} from 'rxjs/operator/take';
import {map} from 'rxjs/operator/map';
import {throttle} from 'rxjs/operator/throttle';
import {takeUntil} from 'rxjs/operator/takeUntil';

function test(observable) {
    return observable
        ::filter(data => data.someTest)
        ::throttle(() =>
            interval(10)
                ::take(1)
                ::takeUntil(observable::filter(data => someOtherTest))
        )
        ::map(someFunction);
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import { interval } from "rxjs/observable/interval"
import { filter } from "rxjs/operator/filter"
import { take } from "rxjs/operator/take"
import { map } from "rxjs/operator/map"
import { throttle } from "rxjs/operator/throttle"
import { takeUntil } from "rxjs/operator/takeUntil"

function test(observable) {
  return observable
    ::filter(data => data.someTest)
    ::throttle(() =>
      interval(10)
        ::take(1)
        ::takeUntil(observable::filter(data => someOtherTest))
    )
    ::map(someFunction)
}

`;

exports[`short_name_method.js - babylon-verify 1`] = `
class X {
  constructor() {
    this.shortMethod = ::this.shortMethod;
  }
  
  shortMethod() {
    return true;
  }
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class X {
  constructor() {
    this.shortMethod = ::this.shortMethod;
  }

  shortMethod() {
    return true;
  }
}

`;

exports[`short_name_method.js - babylon-verify 2`] = `
class X {
  constructor() {
    this.shortMethod = ::this.shortMethod;
  }
  
  shortMethod() {
    return true;
  }
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class X {
  constructor() {
    this.shortMethod = ::this.shortMethod
  }

  shortMethod() {
    return true
  }
}

`;
